--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="video-container">
             <div class="video-overlay"></div>
             <video autoplay muted loop id="promo-video" class="promo-video">
-                <source src="https://assets.mixkit.co/videos/preview/mixkit-man-holding-neon-light-1238-large.mp4" type="video/mp4">
+                <source src=video2.mp4 type="video/mp4">
                 Tu navegador no soporta el elemento video.
             </video>
         </div>
@@ -94,29 +94,32 @@
         </div>
     </section>
 
-    <!-- Sección Sobre Nosotros -->
-    <section id="nosotros" class="about-section">
-        <div class="container">
-            <div class="about-content">
-                <div class="about-text">
-                    <h2 class="about-title">Sobre Nosotros</h2>
-                    <p class="about-description">En TechVision nos apasiona crear soluciones digitales que impulsen el crecimiento de tu negocio. Con más de 10 años de experiencia, hemos ayudado a cientos de empresas a alcanzar sus objetivos digitales.</p>
-                    <p class="about-description">Nuestro equipo multidisciplinario combina creatividad, tecnología y estrategia para ofrecer resultados excepcionales.</p>
-                    <ul class="about-list">
-                        <li class="about-list-item"><i class="fas fa-check"></i> Equipo especializado</li>
-                        <li class="about-list-item"><i class="fas fa-check"></i> Metodologías ágiles</li>
-                        <li class="about-list-item"><i class="fas fa-check"></i> Soporte continuo</li>
-                        <li class="about-list-item"><i class="fas fa-check"></i> Resultados medibles</li>
-                    </ul>
-                </div>
-                <div class="about-image">
-                    <div class="image-placeholder">
-                        <i class="fas fa-users"></i>
-                    </div>
+   <!-- Sección Sobre Nosotros -->
+<section id="nosotros" class="about-section">
+    <div class="container">
+        <div class="about-content">
+            <div class="about-text">
+                <h2 class="about-title">Sobre Nosotros</h2>
+                <p class="about-description">En TechVision nos apasiona crear soluciones digitales que impulsen el crecimiento de tu negocio. Con más de 10 años de experiencia, hemos ayudado a cientos de empresas a alcanzar sus objetivos digitales.</p>
+                <p class="about-description">Nuestro equipo multidisciplinario combina creatividad, tecnología y estrategia para ofrecer resultados excepcionales.</p>
+                <ul class="about-list">
+                    <li class="about-list-item"><i class="fas fa-check"></i> Equipo especializado</li>
+                    <li class="about-list-item"><i class="fas fa-check"></i> Metodologías ágiles</li>
+                    <li class="about-list-item"><i class="fas fa-check"></i> Soporte continuo</li>
+                    <li class="about-list-item"><i class="fas fa-check"></i> Resultados medibles</li>
+                </ul>
+            </div>
+            <div class="about-image">
+                <div class="image-placeholder" style="padding:0;overflow:hidden;">
+                    <video autoplay muted loop playsinline style="width:100%;height:100%;object-fit:cover;border-radius:10px;">
+                        <source src="videoweb.mp4" type="video/mp4">
+                       
+                    </video>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Sección Noticias -->
     <section id="noticias" class="news-section">
@@ -743,4 +746,3 @@
         });
     </script>
 </body>
-</html>
